Fixed content spacing
Fixed content spacing and added max sizes for some elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,12 @@ body {
     background-color: #F8E8DA;
 }
 
+
 h1 {
     font-family: 'Nova Round';
     font-size: 45px;
 }
+
 
 .title {
     display: flex;
@@ -18,6 +20,7 @@ h1 {
     background-size:contain;
     margin-bottom: 30px;
 }
+
 
 .titletxt {
     display: flex;
@@ -35,12 +38,14 @@ h1 {
 
 }
 
+
 .navlink {
     display: flex;
     list-style: none;
     margin: auto;
     padding: 0;
 }
+
 
 a.navlink {
     color: white;
@@ -49,15 +54,20 @@ a.navlink {
 
 
 .hero {
+    margin:auto;
     display: flex;
     align-items: center;
-    gap: 14px;
+    justify-content: center;
+    max-width: 630px;
 }
+
 
 .heroimg {
     display: flex;
     width: 50%;
+    max-width: 300px;
 }
+
 
 .herotxt {
     display: flex;
@@ -66,74 +76,102 @@ a.navlink {
     background-image: linear-gradient(to left, rgba(45, 221, 41, 0.21), rgba(45, 221, 41, 0));
 }
 
+
 .card {
     color: white;
     background-color: black;
     border-radius: 8px;
-    padding:5px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin:15px;
+    padding:10px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 p.card {
-    margin-block-start:0px;
-    margin-block-end:0px;
+    display: block;
+    margin-block-start: none;
+    margin-block-end:none;
 }
+
 
 .btn {
     display: flex;
     justify-content: center;
-    padding: 10px;
     background-color: #2DDD29;
-    box-shadow: 0px 4px 4px rgba (0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
     font-family: 'Nova Round';
     font-size: 28px;
-    margin: 40px;
+    margin: auto;
+    margin-top:30px;
+    margin-bottom: 30px;
+    padding:10px;
+    border: solid 1px black;
+    width: 50%;
+    min-width:250px;
+    max-width:400px;
 }
 
-.footerimg {
-    display: flex;
-    justify-content: center; /* not currently centered */
-    align-items: center;
-    width: 50px;
-    height: 50px;
+
+a.btn {
+    text-decoration: none;
+    color:black;
 }
+
+
+
+.footerimg {
+    display:block;
+    margin: 30px auto 30px auto;
+    width: 50px;
+}
+
 
 .footernav {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 40px;
+    list-style: none;
+    margin:0;
+    padding:0;
+    gap: 40px; /*not sure why this works...*/
 }
+
 
 .footer-btn {
     display: flex;
-    width: 45px;
-    height: 45px;
 
 }
 
-#home {
+
+.home {
     display: flex;
     background-color: #F2357B;
     padding: 10px;
     border-radius: 8px;
-    border: 1px black;
+    border: solid 1px black;
+    height:40px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-#mail {
+
+.mail {
     display: flex;
     justify-self: center;
     background-color: #2DDD29;
     padding: 10px;
     border-radius: 8px;
-    border: 1px black;
+    border: solid 1px black;
+    height:40px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-#linkedin {
+
+.linkedin {
     display: flex;
     background-color: #F28705;
     padding: 10px;
     border-radius: 8px;
-    border: 1px black;
+    border: solid 1px black;
+    height:40px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
